# legado_flutter

./: .gitignore  CURRENT_STATUS.md  README.md  build_android_debug.sh  build_android_release.sh
.agents/skills/caveman/: SKILL.md
.agents/skills/write-a-skill/: SKILL.md
.agents/skills/zoom-out/: SKILL.md
.opencode/skills/improve-codebase-architecture/: LANGUAGE.md  SKILL.md
.trellis/: .template-hashes.json
.trellis/spec/: index.md
.trellis/spec/build-and-release/: android-build.md  build-scripts.md  cargo-workspace.md  index.md
.trellis/spec/cross-language/: data-flow.md  field-mapping.md  frb-bridge.md  index.md
.trellis/spec/flutter-app/: async-and-mounted.md  directory-structure.md  index.md  persistence.md  quality-and-anti-patterns.md  state-and-providers.md  testing.md
.trellis/spec/guides/: backup-aes-thinking-guide.md  index.md
.trellis/spec/rust-core/: directory-structure.md  error-handling.md  index.md  logging.md  quality-and-anti-patterns.md  storage-and-database.md  testing.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-18-drag-cancel-threshold-md3-followup/: prd.md  task.json
.trellis/tasks/05-18-simulation-prev-mirror-md3-followup/: prd.md
.trellis/tasks/05-19-book-info-edit-batch09/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-19-bookshelf-groups-batch07/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-19-bookshelf-sort-batch08/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-19-cache-management-batch15/: implement.jsonl  task.json
.trellis/tasks/05-19-encrypted-backup-batch12/: implement.jsonl  task.json
.trellis/tasks/05-19-full-codebase-review/: check.jsonl  task.json
.trellis/tasks/05-19-local-backup-restore-batch10/: task.json
.trellis/tasks/05-19-local-book-import-batch13/: task.json
.trellis/tasks/05-19-qr-import-batch20/: task.json
.trellis/tasks/05-19-read-time-stats-batch14/: check.jsonl  prd.md  task.json
.trellis/tasks/05-19-rss-detail-favorites-batch18/: task.json
.trellis/tasks/05-19-rss-fetch-articles-batch17/: prd.md  task.json
.trellis/tasks/05-19-rss-source-mgr-batch16/: implement.jsonl  prd.md  task.json
.trellis/tasks/05-19-rule-sub-subscription-batch19/: task.json
.trellis/tasks/05-19-source-validation-live-test-batch21/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/05-19-webdav-sync-batch11/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/05-20-fix-batch-01-jnilibs/: implement.jsonl  prd.md  task.json
.trellis/tasks/05-20-fix-batch-02-manifest-keystore/: check.jsonl  task.json
.trellis/tasks/05-20-fix-batch-06-cargo-deps/: task.json
.trellis/tasks/05-20-fix-batch-07b-cross-dao-tx/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-20-fix-batch-08-dao-sql-dedup/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-20-fix-batch-08b-storagemanager-deletion/: implement.jsonl  task.json
.trellis/tasks/05-20-fix-batch-18b-transport-sse-analysis/: task.json
.trellis/tasks/05-20-fix-roadmap/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/05-21-batch-09-aes-hardening/: task.json
.trellis/tasks/05-21-batch-12-parser-correctness/: prd.md  task.json
.trellis/tasks/05-21-batch-17-core-net-cookie-webdav/: prd.md  task.json
core/: Cargo.toml
core/api-server/: Cargo.toml
core/api-server/src/: main.rs  state.rs  util.rs
core/api-server/src/routes/: bookshelf.rs  explore.rs  mod.rs  reader.rs  replace_rules.rs  search.rs  sources.rs  sse.rs
core/bridge/: Cargo.toml  build.rs
core/bridge/src/: api.rs  frb_generated.rs  lib.rs  local_book.rs  transaction.rs
core/bridge/tests/: download_test.rs
core/core-net/: Cargo.toml
core/core-net/src/: client.rs  cookie.rs  downloader.rs  lib.rs  webdav.rs
core/core-parser/: Cargo.toml
core/core-parser/src/: cleaner.rs
core/core-source/: Cargo.toml
core/core-source/src/: lib.rs  parser.rs  rule_engine.rs  types.rs  utils.rs
core/core-source/src/legado/: http.rs  import.rs  js_runtime.rs  js_shim.rs  mod.rs  regex_rule.rs  rule.rs  selector.rs  ssrf_guard.rs  url.rs
core/core-source/src/rss/: mod.rs  parse_rule.rs  parse_xml.rs
core/core-storage/: Cargo.toml
core/core-storage/src/: backup_dao.rs  book_dao.rs  book_group_dao.rs  cache_dao.rs  cache_stats_dao.rs  chapter_dao.rs  database.rs  download_dao.rs  legado_aes.rs  legado_field_map.rs  lib.rs  models.rs  progress_dao.rs  read_record_dao.rs  replace_rule_dao.rs  rss_article_dao.rs  rss_read_record_dao.rs  rss_source_dao.rs  rss_star_dao.rs  rule_sub_dao.rs  source_dao.rs
docs/: CHANGELOG.md
flutter_app/: pubspec.yaml
flutter_app/android/: key.properties.example
flutter_app/lib/: main.dart
flutter_app/test/: _secure_storage_fake.dart  backup_page_test.dart  backup_password_secure_test.dart  book_info_edit_page_test.dart  bookshelf_add_url_test.dart  bookshelf_local_import_test.dart  bookshelf_manage_page_test.dart  bookshelf_menu_test.dart  bookshelf_page_test.dart  bookshelf_update_toc_test.dart  cache_management_page_test.dart  cover_cache_test.dart  default_home_page_test.dart  delegate_cross_chapter_test.dart  drag_cancel_threshold_test.dart  font_size_derived_test.dart  import_summary_label_test.dart  json_store_test.dart  legado_qr_protocol_test.dart  long_press_action_handler_test.dart  my_hub_page_test.dart  page_view_controller_window_test.dart  platform_int64_test.dart  qr_import_handler_test.dart  qr_scan_page_test.dart  read_stats_page_test.dart  reader_auto_scroller_test.dart  reader_key_handler_test.dart  reader_measure_adjacent_test.dart  reader_page_anim_test.dart  reader_page_reentrance_test.dart  reader_page_test.dart  reader_services_test.dart  reader_settings_anim_duration_test.dart  reader_settings_equality_test.dart  reader_settings_v6_test.dart  reader_simulation_finger_track_test.dart  reader_simulation_tap_bezier_test.dart  refresh_rate_controller_test.dart  remote_book_runner_test.dart  (+27 more)
uihtml/: 书架列表.html  书架右上角菜单.html  书架网格.html  搜索页.html  搜索页菜单.html  阅读器正文改3.html  阅读控件改2.html
(+469 files in other folders)
