[workspace]
members = ["core-net", "core-parser", "core-storage", "core-source", "bridge", "api-server"]
resolver = "2"

# 集中化 sub-crate 包元数据：sub-crate 用 `version.workspace = true` 等继承。
# README 声明 Rust edition 2024；但所有 sub-crate 当前都用 2021，本批不动 edition。
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["legado_flutter contributors"]
license = "MIT"
repository = "https://github.com/lq-259/legado_flutter"

# 集中化 sub-crate 共享依赖版本：批次 BATCH-06 引入。
# - 仅入 workspace.dependencies 的依赖：≥2 个 sub-crate 复用且 API 兼容统一可行。
# - 保持 inline 的依赖：单一使用方 / API 不兼容（md5 vs md-5 / zip 0.6 vs 2.x）。
#   不兼容版本的统一拆出独立批次（BATCH-06b/06c），见各 sub-crate Cargo.toml TODO 注释。
[workspace.dependencies]
# ── 序列化 / 数据 ──────────────────────────────────────────────
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── 日志 ────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# ── 错误处理 ────────────────────────────────────────────────
thiserror = "1.0"

# ── 并发 / 异步 ─────────────────────────────────────────────
# 上限 features = ["full"]：sub-crate 用不到的子模块 cargo 会做 dead-code elim，
# 不影响 release 体积（参考 PRD 风险章节）。
tokio = { version = "1", features = ["full"] }

# ── 时间 / UUID ─────────────────────────────────────────────
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }

# ── 编码 ────────────────────────────────────────────────────
encoding_rs = "0.8"
# 统一到 0.22（原 core-storage / core-net 用 0.21；0.21→0.22 API 兼容，仅 trait
# 重命名 `Engine::encode` 等，本仓库 base64 调用面已审查可平滑迁移）。
base64 = "0.22"
# 统一到 2.1（原 core-net 用 "2"；同 SemVer ^2.0 系列等价）。
urlencoding = "2.1"
sha2 = "0.10"

# ── 加密 ────────────────────────────────────────────────────
aes = "0.8"
# md-5 (core-storage) / md5 (core-source) 仍 inline——API 不兼容，留 BATCH-06b 统一。

# ── 解析 ────────────────────────────────────────────────────
regex = "1.11"
scraper = "0.20"
quick-xml = { version = "0.37", features = ["serialize"] }

# ── 存储 ────────────────────────────────────────────────────
# 最小公共 features = ["bundled"]；core-storage 在子 crate 追加 ["serde_json"]。
rusqlite = { version = "0.31", features = ["bundled"] }

# ── 测试 ────────────────────────────────────────────────────
tempfile = "3"

# ── 凭据 / 安全（基础设施，业务用法见 BATCH-03） ────────────
# 本批仅落地 workspace.dependencies；具体业务字段（密码 / token）改 SecretString
# 留 BATCH-03 处理。
zeroize = "1"
secrecy = "0.8"

# 观察性 lints：仅 level=warn，不挂 build。
# 批量修 unwrap / expect / panic 留 BATCH-11/12（路线图）；
# `-D warnings` 强制开关也在那两批一并打开。
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[workspace.lints.rust]
unused_must_use = "warn"
