[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"

core-storage = { path = "../core-storage" }
core-source = { path = "../core-source" }
core-net = { path = "../core-net" }
core-parser = { path = "../core-parser" }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10"
base64 = "0.22"
url = "2.5"
