[package]
name = "api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.7"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

core-storage = { path = "../core-storage" }
core-source = { path = "../core-source" }
core-net = { path = "../core-net" }
core-parser = { path = "../core-parser" }
rusqlite = { workspace = true }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
url = "2.5"
subtle = "2"

[lints]
workspace = true
