[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
core-net = { path = "../core-net" }
core-source = { path = "../core-source" }
core-storage = { path = "../core-storage" }
core-parser = { path = "../core-parser" }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
regex = "1.11"
tracing = "0.1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
