[package]
name = "bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
core-net = { path = "../core-net" }
core-source = { path = "../core-source" }
core-storage = { path = "../core-storage" }
core-parser = { path = "../core-parser" }
serde_json = { workspace = true }
# bridge 用最小 feature 子集（rt + rt-multi-thread）；workspace 上限 features=["full"]
# 已含这俩，cargo 会按需链接。
rusqlite = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
# tempfile 同时是 build-time / test 用，统一进 [dependencies] 即够；dev-deps 不再重复。
tempfile = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
