[package]
name = "core-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rustls = "0.23"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Cookie 持久化管理
cookie_store = "0.21"
# 代理支持
url = "2.5"
urlencoding = { workspace = true }
# 重试机制
tokio-retry = "0.3"
# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# 编码处理
encoding_rs = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
# BATCH-27c: webdav list_dir parses RFC 1123 / ISO date in
# <getlastmodified>; chrono is the project-blessed date parser.
chrono = { workspace = true }

[dev-dependencies]
httpmock = "0.7"
# BATCH-27c: download_to_path 单测临时目录
tempfile = { workspace = true }

[lints]
workspace = true
