[package]
name = "core-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
scraper = { workspace = true }
quick-xml = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
encoding_rs = { workspace = true }
# EPUB 处理
# TODO(BATCH-06c: cargo-zip-upgrade): 升级到 zip = "2" 与 core-storage 对齐，
# 需改 core-parser/src/epub.rs ZipArchive 调用（0.6 与 2.x API 有破坏性变化）。
# 当前保持 inline 0.6 以避免业务代码改动。
zip = { version = "0.6", default-features = false }
# 日志
tracing = { workspace = true }
# 通用类型
serde_json = { workspace = true }
# zlib 解压 (UMD)
flate2 = "1.0"

[lints]
workspace = true
