[package]
name = "core-source"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
# HTML 解析
scraper = { workspace = true }
# 正则
regex = { workspace = true }
# XML 解析
quick-xml = { workspace = true }
# HTTP 客户端（用于请求书源）
# ureq: simple blocking HTTP client, avoids tokio/DNS issues on Android
# HTTP 客户端
ureq = { version = "3", features = ["cookies", "json", "_tls", "gzip"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls", "blocking"] }
hickory-resolver = "0.25"
# keep reqwest only for backward compat
# reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls-webpki-roots", "blocking", "socks", "hickory-dns"] }
# JavaScript 引擎（用于执行 Legado @js: / <js> / {{JS}} 规则）
rquickjs = { version = "0.8", optional = true }
boa_engine = { version = "0.21", optional = true }
# 日志
tracing = { workspace = true }
# 异步支持
tokio = { workspace = true }
# 编码处理
encoding_rs = { workspace = true }
# URL 解析和编码
url = "2.5"
urlencoding = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
# TODO(BATCH-06b: cargo-md5-unify): 统一到 md-5 (RustCrypto)，需改
# core-source/src/legado/js_runtime.rs:852 调用从 md5::compute() 改为
# Md5::new() + update + finalize 模式。当前与 core-storage 的 md-5 是
# 两个完全不同的 crate（API 不兼容），cargo 会同时编译两份。
md5 = "0.7"
aes = { workspace = true }
cbc = { version = "0.1", features = ["alloc"] }
ecb = { version = "0.1", features = ["alloc"] }
block-padding = "0.3"
# TODO(BATCH-06c: cargo-zip-upgrade): 升级到 zip = "2" 与 core-storage 对齐，
# 需改 core-source/src/legado/js_runtime.rs ZipArchive::new 调用
# （0.6 与 2.x API 有破坏性变化）。
zip = { version = "0.6", default-features = false }
# UUID 生成
uuid = { workspace = true }
# 时间处理
chrono = { workspace = true }
# XPath 引擎
sxd-document = "0.3"
sxd-xpath = "0.4"
# JSONPath 引擎
jsonpath_lib = "0.3"
# TTF 字体解析 (用于字体反爬)
ttf-parser = "0.25"
# SQLite (用于缓存持久化)
rusqlite = { workspace = true }
# TODO(BATCH-06d: arch-core-source-cache-trait): 抽 Cache trait 由 caller
# (bridge / api-server) 注入，移除 core-source → core-storage 反向依赖
# （破坏分层）。当前留作便利。
core-storage = { path = "../core-storage" }

[features]
default = ["js-quickjs"]
js-quickjs = ["dep:rquickjs"]
js-boa = ["dep:boa_engine"]

[dev-dependencies]
httpmock = "0.7"
tempfile = { workspace = true }

[lints]
workspace = true
