[package]
name = "core-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# UUID 生成
uuid = { version = "1.10", features = ["v4", "serde"] }
# 日志
tracing = "0.1"
# 错误处理
thiserror = "1.0"
# 时间处理
chrono = "0.4"
# 备份 zip 打包/解析（批次 10）。仅需 deflate（不需要 aes/bzip2/lzma 等），关闭默认 features 减小体积。
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
