[package]
name = "core-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# UUID 生成
uuid = { version = "1.10", features = ["v4", "serde"] }
# 日志
tracing = "0.1"
# 错误处理
thiserror = "1.0"
# 时间处理
chrono = "0.4"
# 备份 zip 打包/解析（批次 10）。仅需 deflate（不需要 aes/bzip2/lzma 等），关闭默认 features 减小体积。
zip = { version = "2", default-features = false, features = ["deflate"] }
# Legado 兼容 AES 加密（批次 12）。AES-128/ECB/PKCS7 + MD5(password)[0..16] 取 key
# + base64 编码，对齐原 Hutool `AES()` 默认构造（AES/ECB/PKCS5Padding）。仅用
# 块级 cipher（`encrypt_block` / `decrypt_block`），不引入 cbc / cfb / ctr 等。
aes = "0.8"
md-5 = "0.10"
base64 = "0.21"

[dev-dependencies]
tempfile = "3"
