[package]
name = "core-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# core-storage 需要 ["bundled", "serde_json"]；workspace 上限只含 ["bundled"]，
# 这里追加 ["serde_json"]（cargo features 是并集语义）。
rusqlite = { workspace = true, features = ["serde_json"] }
serde = { workspace = true }
serde_json = { workspace = true }
# UUID 生成
uuid = { workspace = true }
# 日志
tracing = { workspace = true }
# 错误处理
thiserror = { workspace = true }
# 时间处理
chrono = { workspace = true }
# 备份 zip 打包/解析（批次 10）。仅需 deflate（不需要 aes/bzip2/lzma 等），关闭默认 features 减小体积。
# TODO(BATCH-06c: cargo-zip-upgrade): 当前 core-parser / core-source 仍用 zip = "0.6"，
# 升级后再考虑把 zip 收入 workspace.dependencies。
zip = { version = "2", default-features = false, features = ["deflate"] }
# Legado 兼容 AES 加密（批次 12）。AES-128/ECB/PKCS7 + MD5(password)[0..16] 取 key
# + base64 编码，对齐原 Hutool `AES()` 默认构造（AES/ECB/PKCS5Padding）。仅用
# 块级 cipher（`encrypt_block` / `decrypt_block`），不引入 cbc / cfb / ctr 等。
aes = { workspace = true }
# TODO(BATCH-06b: cargo-md5-unify): 当前 core-source 用 md5 = "0.7"（独立 crate，
# API 不兼容），合并后再考虑把 md-5 收入 workspace.dependencies。
md-5 = "0.10"
base64 = { workspace = true }
# BATCH-27e: book_url_pattern 匹配（add_url 流程）。复用 workspace pinned
# regex 1.11，与 core-source / core-parser 同版本。
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
